# CTPdemo

./: CMakeLists.txt  README.md
data/: CF805_market_data.csv  T1806_market_data.csv  cu1805_market_data.csv  i1805_market_data.csv
inc/: MdSpi.h
lib/: libMdSpi.so.1  libMdSpi.so.1.2
src/: CMakeLists.txt  MdSpi.cpp  main.cpp
